# EffekseerForWebGL

./: .gitignore  .gitmodules  CHANGES  CMakeLists.txt  README.md  azure-pipelines.yml  build.py  get-pip.py  jsconfig.json  package-lock.json  package.json  rollup.config.js  rollup.config.mjs
.github/workflows/: emsdk-1.38.11.yml  emsdk-2.0.19.yml  package.yml
Dev/Cpp/: glTFEffectFactory.cpp  glTFEffectFactory.h  glTFglbEffectFactory.cpp  glTFglbEffectFactory.h  glbEffectFactory.cpp  glbEffectFactory.h  main.cpp
Dev/Source/: ConvertES6ToES5.bat  effekseer.src.es6.js  effekseer.src.js  main.cpp  post.js
Dev/Source/utils/: EfkEfcProperty.js
Dev/test/: basic.html  basic.js  multi_scene.html  multi_scene.js
Release/: effekseer.d.ts  effekseer.js  effekseer.min.js
Release/Sample/: httpd.bat  index.html
Release/TypeScript/: README.md  index.html  package-lock.json  package.json  renderer.js  renderer.js.map  renderer.ts  tsconfig.json
Release/TypeScript/typings/: LICENSE
docs/: HowToBuild.md  HowToUse.md  WebGPUThreeJS.md  effekseer.js  effekseer.min.js  effekseer.wasm  effekseer_asmjs.min.js
docs/Resources/: Laser02.efk  Simple_Ring_Shape1.efk  block.efk
docs/Sample/: index.html
scripts/: build_emsdk_1_38_11.sh  build_emsdk_2_0_19.sh  build_webgpu_threejs_smoke.sh  clone_dependencies.sh  clone_emsdk.sh
src/: CMakeLists.txt  Effekseer.js  Effekseer.mjs  EffekseerInit.js  EffekseerInit.mjs
src/cpp/: CustomFile.h  EffekseerForWebGL.Common.hpp  EffekseerForWebGL.CustomFile.hpp  EffekseerForWebGL.CustomTexture.hpp  EffekseerForWebGL.NativeService.cpp  EffekseerForWebGL.NativeService.h  bindings.cpp  glTFEffectFactory.cpp  glTFglbEffectFactory.h  glbEffectFactory.cpp  glbEffectFactory.h  main.cpp
src/js/: context.js  context.mjs  effect.js  effect.mjs  effekseer.src.js  handle.js  handle.mjs  license.js  lisence.js  loading.js  loading.mjs  main.js  main.mjs  post.js  utils.js
src/js/utils/: EfkEfcProperty.js
tests/: index.html  npm_install.bat  performance.html  performance.js  post_processing_threejs.html  premultiplied_alpha.html  take_screenshot.py  test.py  utils.html
tests/Resources/: Arrow1.efkefc  Blow1.efkefc  Cure1.efkefc  Light.efkefc  ToonWater.efkefc
tests/Resources/16/: Curve01.efkefc
tests/Resources/Parts/: ToonWaterTube.efkmat
webgpu/: CMakeLists.txt  effekseer.webgpu.js  effekseer_webgpu_runtime.cpp  pre_effekseer_webgpu_threejs_smoke.js  run_webgpu_threejs_smoke.mjs  threejs_smoke.cpp  threejs_webgpu_sample.html  webgpu_offscreen_platform.h
